# papyr

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.dev.yml  environment.yml  index.html  mkdocs.yml  papyr-setup.bat  papyr-setup.command  papyr.bat  papyr.command  papyr.sh  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml
adr/0001-architecture/: index.html
adr/0002-state-sqlite/: index.html
adr/0003-control-file-pause/: index.html
adr/0004-docs-site/: index.html
cli_reference/: index.html
data_schema/: index.html
dev_notes/: index.html
docs/: README.md  cli_reference.md  data_schema.md  dev_notes.md  index.md  providers.md  quickstart.md  resumability.md  troubleshooting.md
docs/adr/: 0001-architecture.md  0002-state-sqlite.md  0003-control-file-pause.md  0004-docs-site.md  0005-launcher-shell.md  0006-keyboard-controls.md  0007-parallel-providers.md  0008-dedup-preprint.md
providers/: index.html
quickstart/: index.html
resumability/: index.html
search/: search_index.json
src/papyr/: __init__.py  __main__.py
src/papyr/adapters/: __init__.py  arxiv.py  base.py  crossref.py  ssrn.py
src/papyr/cli/: app.py  prompts.py  wizard.py
src/papyr/core/: dedup.py  downloader.py  export_csv.py  export_ris.py  export_tsv.py  models.py  normalize.py  pipeline.py  rate_limit.py
src/papyr/util/: config.py  control.py  fs.py  hashing.py  logging.py  (+1 more)
tests/: test_dedup.py  test_normalize.py  test_safe_filename.py  test_state_resume.py
troubleshooting/: index.html
(+3 files in other folders)
